@@ -26,12 +26,15 @@
 #include <stdio.h>
 
 static const char uname_usage[] =
-	"echo [-neE] [ARG ...]\n\n"
-	"Prints the specified ARGs to stdout\n\n"
+	"echo [-neE] [ARG ...]\n"
+#ifndef BB_FEATURE_TRIVIAL_HELP
+	"\nPrints the specified ARGs to stdout\n\n"
 	"Options:\n"
 	"\t-n\tsuppress trailing newline\n"
 	"\t-e\tinterpret backslash-escaped characters (i.e. \\t=tab etc)\n"
-	"\t-E\tdisable interpretation of backslash-escaped characters\n";
+	"\t-E\tdisable interpretation of backslash-escaped characters\n"
+#endif
+	;
 
 extern int 
 echo_main(int argc, char** argv)
