@@ -26,9 +26,12 @@
 #endif
 
 
-static const char dutmp_usage[] = "dutmp [FILE]\n\n"
-	"Dump utmp file format (pipe delimited) from FILE\n"
-	"or stdin to stdout.  (i.e. 'dutmp /var/run/utmp')\n";
+static const char dutmp_usage[] = "dutmp [FILE]\n"
+#ifndef BB_FEATURE_TRIVIAL_HELP
+	"\nDump utmp file format (pipe delimited) from FILE\n"
+	"or stdin to stdout.  (i.e. 'dutmp /var/run/utmp')\n"
+#endif
+	;
 
 extern int dutmp_main(int argc, char **argv)
 {
